frontend/src/assets/style.scss
/* ... */
  .box hr {
    background-color: #efefef;
  }


/* Two column sidebar+body layout */
#app {
  min-height: 100%;
  .wrapper {
    display: flex;
    flex-direction: row;
    min-height: 100vh;
    margin-top: 0px;
  }

  .sidebar {
    flex-shrink: 1;
    box-shadow: 0 0 3px $grey-lighter;
    background: $white;
  }

  .main {
    background: $white;
    margin-left: 15px;
    padding: 30px;
    flex-grow: 1;
    position: relative;
  }
}

.navbar {
  box-shadow: 0 0 3px $grey-lighter;
}
.navbar-brand {
  padding: 0 0 0 25px;
  .favicon {
    display: none;
  }
  .full {
    max-height: 17px;
    margin-top: 15px;
  }
  .favicon {
    margin-top: 12px;
    max-height: 24px;
  }
}

.b-sidebar {
  position: sticky;
  top: 75px;

  .sidebar-content {
    background: transparent;
  }
  .menu-list {
    .router-link-exact-active {
      border-right: 5px solid $primary;
      outline: 0 none;
    }
    li ul {
      margin-right: 0;
    }
    > li {
      margin-bottom: 10px;
      a {
        padding-left: 25px;
      }
    }
    a {
      border-radius: 0;
    }
  }
}

/* Fix for sidebar jumping on modals */
body.is-noscroll {
  position: static;
  overflow-y: visible;
  width: auto;
}

/* Global notices */
.global-notices {
  margin-bottom: 30px;
}
.notification {
  padding: 10px 15px;
  border-left: 5px solid #eee;

  &.is-danger {
    background: $white-ter;
    color: $black;
    border-left-color: $red;
  }
  &.is-success {
    background: $white-ter;
    color: $black;
    border-left-color: $green;
  }
}

/* WYSIWYG / HTML code editor */
.html-editor {
  position: relative;
  width: 100%;
  min-height: 250px;
  height: 65vh;
  border: 1px solid $grey-lighter;
  border-radius: 2px;
}

.plain-editor textarea {
  height: 65vh;
}

.alt-body textarea {
  height: 30vh;
}


.editor {
  margin-bottom: 30px;

  .tox-tinymce {
    box-shadow: 2px 2px 0 #f3f3f3;
    border: 1px solid #e6e6e6;
    border-radius: 3px;
  
    .tox-toolbar__primary {
      border-color: #e6e6e6 !important;
    }
  }
  .tox-statusbar__branding {
    display: none;
  }
  .tox .tox-statusbar {
    border: 0;
  }

  .tox-tinymce--toolbar-sticky-on .tox-editor-header {
    padding-top: 48px !important;
  }

}


.tox.tox-silver-sink {
  z-index: 850;

  .tox-dialog-wrap {
    z-index: 900;
  }
  .tox-dialog {
    @extend .box;
  }

  .tox-track-link {
    display: block;
    cursor: pointer;

    margin: 5px 0 10px 0;
    input {
      margin-right: 5px;
    }
  }

  .tox-button {
    border-radius: 4px;
  }
  .tox-button:not(.tox-button--secondary):not(.tox-button--naked) {
    background: $primary;
  }

  .tox-textfield {
    box-shadow: 2px 2px 0 $white-ter;
    border: 1px solid $grey-lighter;
  }
}

.tox, .tox-tinymce, .tox-tinymce-aux, .tox .tox-button, .tox .tox-button-link, .tox .tox-dialog__title,
  .tox .tox-textfield,
  .tox .tox-toolbar-textfield,
  .tox .tox-listboxfield .tox-listbox--select,
  .tox .tox-textarea,
  .tox .tox-selectfield select {
    /* All TinyMCE components */
    font-family: $body-family !important;
  }

/* Table colors and padding */
.main table {
  thead th {
    background: $white-bis;
    border-bottom: 1px solid $grey-lighter;
  }
  thead th, tbody td {
    padding: 15px 10px;
    border-color: $grey-lightest;
  }

  .actions a, .actions .a {
    margin: 0 10px;
    display: inline-block;
  }
  .actions a[data-disabled],
  .actions .icon[data-disabled] {
    pointer-events: none;
    cursor: not-allowed;
    color: $grey-light;
  }

  td {
    .fields {
      font-size: $size-7;

      p {
        display: table-row;
        border-bottom: 1px solid #ccc;
        line-height: 0.775rem;
      }

      label {
        font-weight: bold;
        display: table-cell;
        vertical-align: top;
        text-align: right;
        padding-bottom: 6px;
      }
      span {
        display: inline-block;
        margin-left: 10px;
      }
    }

  }
}

/* Modal */
.modal {
  z-index: 950;
}
.modal-background {
  background: rgba(255, 255, 255, 0.7);
}
.modal-content, .modal.dialog .modal-card {
  background: $white;
  box-shadow: 2px 2px 3px #e4e4e4;
  border: 1px solid #e5e5e5;
  padding: 0;
}
.modal-card-head {
  display: block;
}
.modal .modal-card-foot {
  justify-content: flex-end;
}
.modal .modal-close.is-large {
  display: none;
}

/* Table */
.b-table .level-left {
  min-width: 60%;
  display: block;

  .actions .a {
    display: inline-block;
    margin-right: 30px;
  }
}


/* Fix for input colours */
.button {
  &.is-primary {
    background: $primary;

    &:hover {
      background: darken($primary, 15%);
    }
    &:disabled {
      background: $grey-light;
    }
  }

  &:not(.is-small) {
    height: auto;
    padding: 10px 20px;
  }
}

.has-addons {
  .controls .button.is-primary {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
  }

  .input:hover {
    box-shadow: none;
  }
}

.autocomplete {
  .dropdown-content {
    background-color: $white-bis;
    border: 1px solid $primary;
  }
  a.dropdown-item {
    font-size: $size-6;
    &:hover, &.is-hovered {
      background-color: $grey-lightest;
      color: $primary;
    }
  }
  .dropdown-menu {
    top: 92%;
  }
  .dropdown-menu.is-opened-top {
    top: auto;
    bottom: 92%;
  }
}

.input, .taginput .taginput-container.is-focusable, .textarea {
  box-shadow: 2px 2px 0 $white-ter;
  border: 1px solid $grey-lighter;
}

.select:not(.is-multiple) {
  height: auto;
}

.input, .select select {
  height: auto;
  padding: 10px 12px;
}
  .control.has-icons-left .icon.is-left {
    height: 3rem;
  }

.taginput .taginput-container .autocomplete {
  input {
    padding: 16px 32px 17px 32px;
  }

  .control.has-icons-left .icon.is-left {
    height: 2rem;
  }
}
/* ... */

